documented the notebooks

--- a/NI_PCI_GPIB/leds_sweep_+-30mA.ipynb
+++ b/NI_PCI_GPIB/leds_sweep_+-30mA.ipynb
@@ -22,8 +22,6 @@
     "import qcodes as qc\n",
     "import pyvisa as visa\n",
     "import matplotlib.pyplot as plt\n",
-    "# enable to get a more debuggable output:\n",
-    "# visa.log_to_screen()\n",
     "\n",
     "# import qcodes dataset modules and utilities\n",
     "from qcodes.dataset import (\n",
@@ -47,6 +45,9 @@
     "# importing the instrument driver packages: \n",
     "from qcodes.instrument_drivers.yokogawa.GS200 import GS200\n",
     "from qcodes.instrument_drivers.tektronix.Keithley_2400 import Keithley_2400\n",
+    "\n",
+    "# uncomment to get a more debuggable output:\n",
+    "# visa.log_to_screen()\n",
     "\n",
     "# pyvisa-py resource manager\n",
     "rm = visa.ResourceManager('@py')\n",
@@ -146,7 +147,9 @@
     "gs = GS200(\"gs200\", address=resources[0], terminator=\"\\n\")\n",
     "\n",
     "# the instrument is initialized and stored as a variable gs, where \"keith\" is its name\n",
-    "keith = Keithley_2400(\"keithley2400\", address=resources[1])"
+    "keith = Keithley_2400(\"keithley2400\", address=resources[1])\n",
+    "\n",
+    "# there will be a lot of errors like `libgpib: invalid descriptor`, but these can be ignored for our purposes"
    ]
   },
   {
@@ -239,12 +242,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# lower the compliance current all the way\n",
-    "#keith.mode('VOLT')\n",
+    "# to switch to the voltage mode, first the current mode has to be initiated for some reason\n",
     "keith._set_mode_and_sense('CURR')\n",
     "keith._set_mode_and_sense('VOLT')\n",
+    "\n",
+    "# lower the compliance all the way, what is the compliance? \n",
     "keith.compliancei(1e-06)\n",
+    "\n",
+    "# define the voltage measurement range\n",
     "keith.rangev(30)\n",
+    "\n",
+    "# set the output to true, so that measurements can be made\n",
     "keith.output(1)"
    ]
   },
@@ -255,6 +263,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# create a database at this directory\n",
+    "# still not sure where I can find it tho?\n",
     "initialise_or_create_database_at(\"~/leds_actual.db\")"
    ]
   },
@@ -265,6 +275,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# create an experiment in the database\n",
     "leds_exp = load_or_create_experiment(\n",
     "    experiment_name=\"leds_30mA\",\n",
     "    sample_name=\"green_led\"\n",
@@ -278,6 +289,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# create a measurment in the experiment, still not completely sure how to to use this\n",
     "context_meas = Measurement(exp=leds_exp, name='context_example')"
    ]
   },
@@ -299,7 +311,7 @@
     }
    ],
    "source": [
-    "# Register the independent parameter...\n",
+    "# register the independent parameter...\n",
     "context_meas.register_parameter(gs.current)\n",
     "# ...then register the dependent parameter\n",
     "context_meas.register_parameter(keith.volt, setpoints=(gs.current,))"
@@ -312,7 +324,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Setting up a doNd measurement\n",
+    "# setting up a doNd measurement\n",
+    "# we can see that we are sweeping from -30 to 30 mA, over 600 steps with an interval of 0.01 seconds between \n",
     "sweep_1 = LinSweep(gs.current, -0.03, 0.03, 600, 0.01)"
    ]
   },
@@ -360,8 +373,10 @@
     }
    ],
    "source": [
+    "# set the yokogama current to zero before starting the experiment\n",
     "gs.current(0)\n",
     "\n",
+    "# define the data collection parameters\n",
     "dond(\n",
     "    sweep_1,                          # 1st independent parameter\n",
     "    keith.volt,                 # 1st dependent parameter\n",
@@ -400,6 +415,7 @@
     }
    ],
    "source": [
+    "# list the experiments\n",
     "experiments() "
    ]
   },
@@ -424,6 +440,7 @@
     }
    ],
    "source": [
+    "# define the red led dataset based on the experiments\n",
     "red_dataset = load_by_run_spec(experiment_name='leds_30mA', captured_run_id=3)\n",
     "red_dataset"
    ]
@@ -449,6 +466,7 @@
     }
    ],
    "source": [
+    "# define the green led dataset based on the experiments\n",
     "green_dataset = load_by_run_spec(experiment_name='leds_30mA', captured_run_id=4)\n",
     "green_dataset"
    ]
@@ -496,6 +514,7 @@
     }
    ],
    "source": [
+    "# plot both datasets to verify that they look reasonable\n",
     "plot_dataset(red_dataset)\n",
     "plot_dataset(green_dataset)"
    ]
@@ -552,9 +571,11 @@
     }
    ],
    "source": [
+    "# create a dataframe for the green led\n",
     "green_df = green_dataset.to_pandas_dataframe()\n",
     "green_df.reset_index()[:1]\n",
     "\n",
+    "# create a dataframe for the red led\n",
     "red_df = red_dataset.to_pandas_dataframe()\n",
     "red_df.reset_index()[:1]"
    ]
@@ -579,25 +600,39 @@
     }
    ],
    "source": [
+    "# define the data for the axes of the green led\n",
     "x_green = green_df.reset_index().loc[:,\"gs200_current\"]\n",
     "y_green = green_df.reset_index().loc[:,\"keithley2400_volt\"]\n",
     "\n",
+    "# define the data for the axes of the red led\n",
     "x_red = red_df.reset_index().loc[:,\"gs200_current\"]\n",
     "y_red = red_df.reset_index().loc[:,\"keithley2400_volt\"]\n",
     "\n",
+    "# define the size of the plot\n",
     "plt.figure(figsize=(10, 8))\n",
+    "\n",
+    "# define the shorthand for the axes\n",
     "ax = plt.axes()\n",
+    "\n",
+    "# uncomment for a scatter plot:\n",
     "#ax.scatter(x=x_green, y=y_green, color=\"green\")\n",
     "#ax.scatter(x=x_red, y=y_red, color=\"red\")\n",
+    "\n",
+    "# do a line plot of both datasets\n",
     "ax.plot(red_df, color=\"red\")\n",
     "ax.plot(green_df, color = \"green\")\n",
     "\n",
+    "# label the axes\n",
     "ax.set_xlabel('Current(A)')\n",
     "ax.set_ylabel('Voltage(V)')\n",
     "\n",
+    "# draw a grid\n",
     "plt.grid()\n",
+    "\n",
+    "# have a chart title\n",
     "plt.title(\"Green Diode vs Red Diode\")\n",
     "\n",
+    "# uncomment if you want there to be a limit\n",
     "#plt.xlim([-0.001, 0.001])\n",
     "plt.show()"
    ]
@@ -612,6 +647,17 @@
     "# reset both instruments to their original defaults\n",
     "gs.reset()\n",
     "keith.reset()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "02f6f688",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# close the resource manager\n",
+    "rm.close()"
    ]
   }
  ],
