cleaned up notebook

--- a/NI_PCI_GPIB/leds_sweep_precise.ipynb
+++ b/NI_PCI_GPIB/leds_sweep_precise.ipynb
@@ -16,14 +16,32 @@
    ],
    "source": [
     "# importing packages\n",
-    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
-    "import time\n",
-    "import qcodes as qc\n",
+    "import pandas as pd\n",
     "import pyvisa as visa\n",
-    "import ipywidgets as widgets\n",
+    "import qcodes as qc\n",
     "# enable to get a more debuggable output:\n",
     "#visa.log_to_screen()\n",
+    "\n",
+    "# importing more QCoDeS-specific items\n",
+    "from qcodes.dataset import (\n",
+    "    Measurement,\n",
+    "    experiments,\n",
+    "    initialise_or_create_database_at,\n",
+    "    load_by_run_spec,\n",
+    "    load_or_create_experiment,\n",
+    ")\n",
+    "\n",
+    "## Multidimensional scanning module\n",
+    "from qcodes.utils.dataset.doNd import (\n",
+    "    dond, \n",
+    "    LinSweep, \n",
+    "    LogSweep\n",
+    ")\n",
+    "\n",
+    "## Integrated plotting module\n",
+    "from qcodes.dataset.plotting import plot_dataset\n",
     "\n",
     "# importing the instrument driver packages: \n",
     "from qcodes.instrument_drivers.yokogawa.GS200 import GS200\n",
@@ -251,43 +269,6 @@
    ],
    "source": [
     "gs.print_readable_snapshot()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "bfede977-2aea-4023-980c-75b67443a015",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "import qcodes as qc\n",
-    "from qcodes.dataset import (\n",
-    "    Measurement,\n",
-    "    experiments,\n",
-    "    initialise_or_create_database_at,\n",
-    "    load_by_run_spec,\n",
-    "    load_or_create_experiment,\n",
-    ")\n",
-    "\n",
-    "## Dummy instruments for generating synthetic data\n",
-    "from qcodes.tests.instrument_mocks import (\n",
-    "    DummyInstrument, \n",
-    "    DummyInstrumentWithMeasurement\n",
-    ")\n",
-    "\n",
-    "## Multidimensional scanning module\n",
-    "from qcodes.utils.dataset.doNd import (\n",
-    "    dond, \n",
-    "    LinSweep, \n",
-    "    LogSweep\n",
-    ")\n",
-    "\n",
-    "## Integrated plotting module\n",
-    "from qcodes.dataset.plotting import plot_dataset\n",
-    "\n",
-    "## Using interactive widget\n",
-    "from qcodes.interactive_widget import experiments_widget"
    ]
   },
   {
@@ -651,16 +632,6 @@
     "\n",
     "red_df = red_dataset.to_pandas_dataframe()\n",
     "red_df.reset_index()[:1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 220,
-   "id": "a72ce5cd-ad76-44f6-b5c2-30538691b26c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import matplotlib.pyplot as plt"
    ]
   },
   {
