--- a/NI_PCI_GPIB/leds_sweep_+200mA.ipynb
+++ b/NI_PCI_GPIB/leds_sweep_+200mA.ipynb
@@ -21,13 +21,33 @@
     "import time\n",
     "import qcodes as qc\n",
     "import pyvisa as visa\n",
-    "import ipywidgets as widgets\n",
-    "# enable to get a more debuggable output:\n",
-    "#visa.log_to_screen()\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "# import qcodes dataset modules and utilities\n",
+    "from qcodes.dataset import (\n",
+    "    Measurement,\n",
+    "    experiments,\n",
+    "    initialise_or_create_database_at,\n",
+    "    load_by_run_spec,\n",
+    "    load_or_create_experiment,\n",
+    ")\n",
+    "\n",
+    "# multidimensional scanning module\n",
+    "from qcodes.utils.dataset.doNd import (\n",
+    "    dond, \n",
+    "    LinSweep, \n",
+    "    LogSweep\n",
+    ")\n",
+    "\n",
+    "# integrated plotting module\n",
+    "from qcodes.dataset.plotting import plot_dataset\n",
     "\n",
     "# importing the instrument driver packages: \n",
     "from qcodes.instrument_drivers.yokogawa.GS200 import GS200\n",
     "from qcodes.instrument_drivers.tektronix.Keithley_2400 import Keithley_2400\n",
+    "\n",
+    "# uncomment to get a more debuggable output:\n",
+    "# visa.log_to_screen()\n",
     "\n",
     "# pyvisa-py resource manager\n",
     "rm = visa.ResourceManager('@py')\n",
@@ -167,43 +187,6 @@
    "source": [
     "station.add_component(gs)\n",
     "station.add_component(keith)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "bfede977-2aea-4023-980c-75b67443a015",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "import qcodes as qc\n",
-    "from qcodes.dataset import (\n",
-    "    Measurement,\n",
-    "    experiments,\n",
-    "    initialise_or_create_database_at,\n",
-    "    load_by_run_spec,\n",
-    "    load_or_create_experiment,\n",
-    ")\n",
-    "\n",
-    "## Dummy instruments for generating synthetic data\n",
-    "from qcodes.tests.instrument_mocks import (\n",
-    "    DummyInstrument, \n",
-    "    DummyInstrumentWithMeasurement\n",
-    ")\n",
-    "\n",
-    "## Multidimensional scanning module\n",
-    "from qcodes.utils.dataset.doNd import (\n",
-    "    dond, \n",
-    "    LinSweep, \n",
-    "    LogSweep\n",
-    ")\n",
-    "\n",
-    "## Integrated plotting module\n",
-    "from qcodes.dataset.plotting import plot_dataset\n",
-    "\n",
-    "## Using interactive widget\n",
-    "from qcodes.interactive_widget import experiments_widget"
    ]
   },
   {
