--- a/NI_PCI_GPIB/leds_sweep_+200mA.ipynb
+++ b/NI_PCI_GPIB/leds_sweep_+200mA.ipynb
@@ -157,6 +157,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# create a station for the experiment\n",
     "station = qc.Station()"
    ]
   },
@@ -185,6 +186,7 @@
     }
    ],
    "source": [
+    "# add the GS210 and Keithley 2400 instruments to the station\n",
     "station.add_component(gs)\n",
     "station.add_component(keith)"
    ]
@@ -196,6 +198,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# reset the GS210, set it into current mode, enable it to adjust its range automatically and turn its output on\n",
     "gs.reset()\n",
     "gs.source_mode('CURR')\n",
     "gs.current(0)\n",
@@ -210,6 +213,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# reset the Keithley 2400\n",
     "keith.reset()"
    ]
   },
@@ -220,15 +224,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# lower the compliance current all the way\n",
-    "#keith.mode('VOLT')\n",
+    "# first set the Keithley 2400 into current mode, then into voltage mode and adjust the compliance and voltage range to be optimal for measurements\n",
     "keith._set_mode_and_sense('CURR')\n",
     "keith._set_mode_and_sense('VOLT')\n",
     "keith.compliancei(1e-06)\n",
     "keith.rangev(30)\n",
-    "#keith.sense()\n",
-    "keith.output(1)\n",
-    "# resetting the instrument"
+    "# turn on the output\n",
+    "keith.output(1)"
    ]
   },
   {
@@ -238,6 +240,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# create an experimental database at this directory\n",
     "initialise_or_create_database_at(\"~/leds_actual.db\")"
    ]
   },
@@ -248,6 +251,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# create an experiment called leds_exp with an experiment name and sample name\n",
     "leds_exp = load_or_create_experiment(\n",
     "    experiment_name=\"leds_200mA\",\n",
     "    sample_name=\"red_led\"\n",
@@ -261,6 +265,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# create the measurement\n",
     "context_meas = Measurement(exp=leds_exp, name='context_example')"
    ]
   },
@@ -295,7 +300,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Setting up a doNd measurement\n",
+    "# Setting up a doNd measurement to sweep from 0 to 200mA with 1000 points with a time of 0.01s between each\n",
     "sweep_1 = LinSweep(gs.current, 0.00, 0.2, 1000, 0.01)"
    ]
   },
