actually documented this notebook

--- a/NI_PCI_GPIB/leds_sweep_+200mA.ipynb
+++ b/NI_PCI_GPIB/leds_sweep_+200mA.ipynb
@@ -139,13 +139,20 @@
    "source": [
     "# list the resources that the visapy-py backend detects, should look something like:\n",
     "# `('ASRL/dev/ttyS4::INSTR', 'USB0::2849::57::91LA25023::0::INSTR')`\n",
-    "resources = rm.list_resources()\n",
-    "\n",
+    "resources = rm.list_resources()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8d57956e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# intialize the instrument with the following parameters:\n",
     "\n",
     "# the instrument is initialized and stored as a variable gs, where \"gs200\" is its name\n",
     "gs = GS200(\"gs200\", address=resources[0], terminator=\"\\n\")\n",
-    "\n",
     "# the instrument is initialized and stored as a variable gs, where \"keith\" is its name\n",
     "keith = Keithley_2400(\"keithley2400\", address=resources[1])"
    ]
@@ -198,11 +205,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# reset the GS210, set it into current mode, enable it to adjust its range automatically and turn its output on\n",
+    "# reset the GS210\n",
     "gs.reset()\n",
+    "# set it into current mode\n",
     "gs.source_mode('CURR')\n",
+    "# set the current to 0\n",
     "gs.current(0)\n",
+    "# enable it to adjust its range automatically \n",
     "gs.auto_range(True)\n",
+    "# turn its output on\n",
     "gs.output('on')"
    ]
   },
@@ -224,10 +235,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# first set the Keithley 2400 into current mode, then into voltage mode and adjust the compliance and voltage range to be optimal for measurements\n",
+    "# first set the Keithley 2400 into current mode\n",
     "keith._set_mode_and_sense('CURR')\n",
+    "# then into voltage mode\n",
     "keith._set_mode_and_sense('VOLT')\n",
+    "# adjust the compliance current to be optimal for measurements\n",
     "keith.compliancei(1e-06)\n",
+    "# adjust the voltage range to be optimal for measurements\n",
     "keith.rangev(30)\n",
     "# turn on the output\n",
     "keith.output(1)"
@@ -333,16 +347,19 @@
     }
    ],
    "source": [
+    "# set the GS210 current to be 0 before the experiment\n",
     "gs.current(0)\n",
     "\n",
+    "# start a sweep\n",
     "dond(\n",
-    "    sweep_1,                          # 1st independent parameter\n",
-    "    keith.volt,                 # 1st dependent parameter\n",
-    "    measurement_name=\"red_diode\",#ment name\n",
-    "    exp=leds_exp,             # Set the experiment to save data to.\n",
-    "    show_progress=True                # Optional progress bar\n",
+    "    sweep_1,                        # 1st independent parameter\n",
+    "    keith.volt,                     # 1st dependent parameter\n",
+    "    measurement_name=\"red_diode\",   # experiment name\n",
+    "    exp=leds_exp,                   # set the experiment to save data to.\n",
+    "    show_progress=True              # optional progress bar\n",
     ")\n",
     "\n",
+    "# set the GS210 current to be 0 after the experiment\n",
     "gs.current(0)"
    ]
   },
@@ -394,6 +411,7 @@
     }
    ],
    "source": [
+    "# list all of the experiments in the experimental database\n",
     "experiments() "
    ]
   },
@@ -418,6 +436,7 @@
     }
    ],
    "source": [
+    "# load an experiment by specification, and call it red_dataset\n",
     "red_dataset = load_by_run_spec(experiment_name='leds_200mA', captured_run_id=13)\n",
     "red_dataset"
    ]
@@ -443,6 +462,7 @@
     }
    ],
    "source": [
+    "# load an experiment by specification, and call it green_dataset\n",
     "green_dataset = load_by_run_spec(experiment_name='leds_200mA', captured_run_id=11)\n",
     "green_dataset"
    ]
@@ -490,6 +510,7 @@
     }
    ],
    "source": [
+    "# plot both the red and green datasets\n",
     "plot_dataset(red_dataset)\n",
     "plot_dataset(green_dataset)"
    ]
@@ -546,11 +567,10 @@
     }
    ],
    "source": [
+    "# create a dataframe out of the green LED data\n",
     "green_df = green_dataset.to_pandas_dataframe()\n",
-    "green_df.reset_index()[:1]\n",
-    "\n",
-    "red_df = red_dataset.to_pandas_dataframe()\n",
-    "red_df.reset_index()[:1]"
+    "# create a dataframe out of the red LED data\n",
+    "red_df = red_dataset.to_pandas_dataframe()"
    ]
   },
   {
