updated some of the notebooks

--- a/GS210_USB/Initialization_Guide.ipynb
+++ b/GS210_USB/Initialization_Guide.ipynb
@@ -473,22 +473,22 @@
     "# importing an instrument driver\n",
     "from qcodes.instrument_drivers.yokogawa.GS200 import GS200\n",
     "\n",
-    "# intialize the instrument with the following parameters\n",
+    "# intialize the instrument with the following parameters:\n",
     "\n",
     "# the instrument is initialized and stored as a variable gs, where \"gs200\" is its name\n",
-    "gs = GS200(\"gs200\", address=ni_rm_interface.value, terminator=\"\\n\")\n",
-    "\n",
-    "# close the pyvisa-py resource manager:\n",
-    "py_rm.close()"
+    "gs = GS200(\"gs200\", address=ni_rm_interface.value, terminator=\"\\n\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "586c4534-c429-4eaa-a86d-9dfa6f17df3f",
+   "id": "4d7d4c8e",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# close the pyvisa-py resource manager:\n",
+    "py_rm.close()"
+   ]
   }
  ],
  "metadata": {
