--- a/GS210_USB/QCoDeS-GS210.ipynb
+++ b/GS210_USB/QCoDeS-GS210.ipynb
@@ -104,7 +104,17 @@
    "outputs": [],
    "source": [
     "# resetting the instrument\n",
-    "gs.reset()\n",
+    "gs.reset()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e2d346d0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# set the instrument to automatically adjust its range\n",
     "gs.auto_range(True)"
    ]
   },
@@ -137,7 +147,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gs.voltage(0.1)\n",
+    "# set the output voltage of the instrument to 0.1V\n",
+    "gs.voltage(0.1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f272c85e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# turn the output of the instrument on\n",
     "gs.output('on')"
    ]
   },
@@ -148,83 +169,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# turn the output of the instrument off\n",
     "gs.output('off')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "870334f9-1b96-4134-b807-54561077a805",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# automatically adjust the range of the outputs\n",
-    "gs.auto_range(True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "c1b7f0d6-f794-4919-994f-55e58af087e5",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'CURR'"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "gs.source_mode('CURR')\n",
-    "gs.source_mode()\n",
-    "gs.current(0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "9221f7ea-027d-4a5c-b50d-4dea78b99d8e",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d2881e570b9e4685962329bcbf6bda80",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "ToggleButtons(description='Mode:', options=('Voltage', 'Current'), value='Voltage')"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "import ipywidgets as widgets\n",
-    "from IPython.display import display\n",
-    "mode_toggle = widgets.ToggleButtons(\n",
-    "    options=['Voltage', 'Current'],\n",
-    "    description='Mode:',\n",
-    "    disabled=False,\n",
-    "    button_style='', # 'success', 'info', 'warning', 'danger' or ''\n",
-    "    #tooltips=['Description of slow', 'Description of regular', 'Description of fast'],\n",
-    "#     icons=['check'] * 3\n",
-    ")\n",
-    "\n",
-    "def changed(change):\n",
-    "    print(mode_toggle.value)\n",
-    "    gs.source_mode(mode_toggle.value[:4].upper())\n",
-    "    \n",
-    "mode_toggle.observe(changed, 'value')\n",
-    "\n",
-    "mode_toggle"
    ]
   },
   {
@@ -242,64 +188,20 @@
     }
    ],
    "source": [
-    "# ramping up current from 0 to 100mA in intervals of 0.1mA each 0.01 seconds\n",
+    "# ramping up current from 0 to 100mA in intervals of 0.1mA each 0.01 seconds:\n",
+    "\n",
+    "# set the output mode to current\n",
+    "gs.source_mode('CURR')\n",
+    "# turn on the output\n",
     "gs.output('on')\n",
+    "# set the current to 0\n",
     "gs.current(0)\n",
+    "\n",
+    "# ramp the current and measure the time that it takes, you can actually see the values update on the instrument\n",
     "t1 = time.time()\n",
     "gs.ramp_current(0.0002, 0.00001, 0.1)\n",
     "t2 = time.time()\n",
     "print(\"Ramping took {:.4} seconds\".format(t2-t1))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "f7bba727-b6f8-41b2-8b50-9f930c9a5560",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "gs200:\n",
-      "\tparameter    value\n",
-      "--------------------------------------------------------------------------------\n",
-      "BNC_in        :\tNone \n",
-      "BNC_out       :\tNone \n",
-      "IDN           :\t{'vendor': 'YOKOGAWA', 'model': 'GS210', 'serial': '91LA25023...\n",
-      "auto_range    :\tTrue \n",
-      "current       :\t0.1 (I)\n",
-      "current_limit :\tNone (I)\n",
-      "current_range :\t0.1 (I)\n",
-      "four_wire     :\tNone \n",
-      "guard         :\tNone \n",
-      "line_freq     :\tNone (Hz)\n",
-      "output        :\ton \n",
-      "output_level  :\t0.1 (I)\n",
-      "range         :\t0.1 (I)\n",
-      "source_mode   :\tCURR \n",
-      "system_errors :\tNone \n",
-      "timeout       :\t5 (s)\n",
-      "voltage_limit :\tNone (V)\n"
-     ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "max() arg is an empty sequence",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [16]\u001b[0m, in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# print a readable, more easy to understand snapshot of the data\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[43mgs\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mprint_readable_snapshot\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m~/miniconda3/envs/qcodes/lib/python3.9/site-packages/qcodes/instrument/base.py:333\u001b[0m, in \u001b[0;36mInstrumentBase.print_readable_snapshot\u001b[0;34m(self, update, max_chars)\u001b[0m\n\u001b[1;32m    330\u001b[0m     \u001b[38;5;28mprint\u001b[39m(msg)\n\u001b[1;32m    332\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m submodule \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39msubmodules\u001b[38;5;241m.\u001b[39mvalues():\n\u001b[0;32m--> 333\u001b[0m     \u001b[43msubmodule\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mprint_readable_snapshot\u001b[49m\u001b[43m(\u001b[49m\u001b[43mupdate\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mupdate\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    334\u001b[0m \u001b[43m                                      \u001b[49m\u001b[43mmax_chars\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mmax_chars\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m~/miniconda3/envs/qcodes/lib/python3.9/site-packages/qcodes/instrument/base.py:302\u001b[0m, in \u001b[0;36mInstrumentBase.print_readable_snapshot\u001b[0;34m(self, update, max_chars)\u001b[0m\n\u001b[1;32m    298\u001b[0m par_lengths \u001b[38;5;241m=\u001b[39m [\u001b[38;5;28mlen\u001b[39m(p) \u001b[38;5;28;01mfor\u001b[39;00m p \u001b[38;5;129;01min\u001b[39;00m snapshot[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mparameters\u001b[39m\u001b[38;5;124m'\u001b[39m]]\n\u001b[1;32m    300\u001b[0m \u001b[38;5;66;03m# Min of 50 is to prevent a super long parameter name to break this\u001b[39;00m\n\u001b[1;32m    301\u001b[0m \u001b[38;5;66;03m# function\u001b[39;00m\n\u001b[0;32m--> 302\u001b[0m par_field_len \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mmin\u001b[39m(\u001b[38;5;28;43mmax\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mpar_lengths\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241m+\u001b[39m\u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m50\u001b[39m)\n\u001b[1;32m    304\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mname \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m:\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m    305\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m{\u001b[39m\u001b[38;5;124m0:<\u001b[39m\u001b[38;5;132;01m{1}\u001b[39;00m\u001b[38;5;124m}\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;241m.\u001b[39mformat(\u001b[38;5;124m'\u001b[39m\u001b[38;5;130;01m\\t\u001b[39;00m\u001b[38;5;124mparameter \u001b[39m\u001b[38;5;124m'\u001b[39m, par_field_len) \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mvalue\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
-      "\u001b[0;31mValueError\u001b[0m: max() arg is an empty sequence"
-     ]
-    }
-   ],
-   "source": [
-    "# print a readable, more easy to understand snapshot of the data\n",
-    "gs.print_readable_snapshot()"
    ]
   },
   {
@@ -312,19 +214,11 @@
     "# disconnect from the instrument, it will have to reinitialized again\n",
     "gs.close()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7631cccf-a541-4142-ada2-6b0b961e34c1",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.8.9 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -338,7 +232,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.8.9"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
+   }
   }
  },
  "nbformat": 4,
