--- a/GS210_USB/GS210_VI_Selector.ipynb
+++ b/GS210_USB/GS210_VI_Selector.ipynb
@@ -186,6 +186,7 @@
     "#     icons=['check'] * 3\n",
     ")\n",
     "\n",
+    "# define the detection in the press of the button to change voltage and current\n",
     "def changed(change):\n",
     "    print(mode_toggle.value)\n",
     "    gs.source_mode(mode_toggle.value[:4].upper())\n",
@@ -209,7 +210,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.8.9 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -223,7 +224,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.8.9"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
+   }
   }
  },
  "nbformat": 4,
